few formatting changes

--- a/UCF-Crime/Crime 128_64 FastGRNN implementation.ipynb
+++ b/UCF-Crime/Crime 128_64 FastGRNN implementation.ipynb
@@ -118,31 +118,18 @@
     "    dataset_name.drop(['video_path','label'],axis=1,inplace=True)\n",
     "    filtered_train = dataset_name\n",
     "    filtered_target = labels\n",
-    "\n",
-    "    \n",
     "    print(filtered_train.shape)\n",
     "    print(filtered_target.shape)\n",
-    "\n",
-    "\n",
     "    y = filtered_target.values.reshape(int(len(filtered_target)/bagsize),bagsize)    #input bagsize\n",
-    "\n",
-    "    x = filtered_train.values\n",
-    "\n",
-    "                                                                                      #no_of_features=540\n",
+    "    x = filtered_train.values                                                                                    #no_of_features=540\n",
     "    x = x.reshape(int(len(x) / bagsize),bagsize, no_of_features)  \n",
-    "\n",
-    "\n",
     "    print(x.shape)                         #(Bags, Timesteps, Features)\n",
-    "\n",
-    "\n",
-    "\n",
     "    one_hot_list = []\n",
     "    for i in range(len(y)):\n",
     "        one_hot_list.append(set(y[i]).pop())\n",
     "\n",
     "    categorical_y_ver = one_hot_list\n",
     "    categorical_y_ver = np.array(categorical_y_ver)\n",
-    "\n",
     "\n",
     "    def one_hot(y, numOutput):\n",
     "        y = np.reshape(y, [-1])\n",
@@ -151,23 +138,16 @@
     "            ret[i, label] = 1\n",
     "        return ret\n",
     "\n",
-    "\n",
     "    from sklearn.model_selection import train_test_split\n",
     "    import pathlib\n",
     "\n",
-    "\n",
-    "    x_train_val_combined, x_test, y_train_val_combined, y_test = train_test_split(x, categorical_y_ver, test_size=0.20, random_state=13)\n",
-    "\n",
-    "\n",
-    "                                                                                            #extractedDir = '/home/adithyapa4444_gmail_com/'\n",
-    "\n",
+    "    x_train_val_combined, x_test, y_train_val_combined, y_test = train_test_split(x, categorical_y_ver, test_size=0.20, random_state=13)                                                                                        #extractedDir = '/home/adithyapa4444_gmail_com/'\n",
     "    timesteps = x_train_val_combined.shape[-2] #125\n",
     "    feats = x_train_val_combined.shape[-1]  #9\n",
-    "\n",
     "    trainSize = int(x_train_val_combined.shape[0]*0.9) #6566\n",
     "    x_train, x_val = x_train_val_combined[:trainSize], x_train_val_combined[trainSize:] \n",
     "    y_train, y_val = y_train_val_combined[:trainSize], y_train_val_combined[trainSize:]\n",
-    "\n",
+    "    \n",
     "    # normalization\n",
     "    x_train = np.reshape(x_train, [-1, feats])\n",
     "    mean = np.mean(x_train, axis=0)\n",
@@ -205,10 +185,7 @@
     "            y_train = one_hot(y_train, numOutput)\n",
     "            y_val = one_hot(y_val, numOutput)\n",
     "            y_test = one_hot(y_test, numOutput)\n",
-    "            \n",
-    "\n",
     "            pathlib.Path(extractedDir + 'RAW').mkdir(parents=True, exist_ok = True)\n",
-    "\n",
     "            np.save(extractedDir + \"RAW/x_train\", x_train)\n",
     "            np.save(extractedDir + \"RAW/y_train\", y_train)\n",
     "            np.save(extractedDir + \"RAW/x_test\", x_test)\n",
@@ -219,7 +196,6 @@
     "    y_train = one_hot(y_train, numOutput)\n",
     "    y_val = one_hot(y_val, numOutput)\n",
     "    y_test = one_hot(y_test, numOutput)\n",
-    "\n",
     "    data = {\n",
     "        'x_train' : x_train, \n",
     "        'y_train' : y_train, \n",
@@ -229,8 +205,6 @@
     "        'y_test' : y_test\n",
     "    }\n",
     "            \n",
-    "        \n",
-    "\n",
     "    def loadData(dirname):\n",
     "        x_train = np.load(dirname + '/' + 'x_train.npy')\n",
     "        y_train = np.load(dirname + '/' + 'y_train.npy')\n",
@@ -239,7 +213,6 @@
     "        x_val = np.load(dirname + '/' + 'x_val.npy')\n",
     "        y_val = np.load(dirname + '/' + 'y_val.npy')\n",
     "        return x_train, y_train, x_test, y_test, x_val, y_val\n",
-    "\n",
     "\n",
     "    def bagData(X, Y, subinstanceLen, subinstanceStride,numClass,numSteps,numFeats):\n",
     "        '''\n",
@@ -290,9 +263,7 @@
     "            label = np.array(labelBag)\n",
     "            y_bagged.append(label)\n",
     "        return np.array(x_bagged), np.array(y_bagged)\n",
-    "\n",
     "                                                                                                            #sourceDir, outDir\n",
-    "\n",
     "    def makeEMIData(subinstanceLen, subinstanceStride, data, sourceDir, outDir,numClass,numSteps,numFeats):\n",
     "        x_train, y_train, x_test, y_test, x_val, y_val = loadData(sourceDir)\n",
     "        try:\n",
@@ -322,11 +293,7 @@
     "        \n",
     "        return(x_train, y_train, x_val, y_val, x_test, y_test)\n",
     "\n",
-    "\n",
-    "\n",
-    "                                                                                        #subinstanceLen = 12\n",
-    "                                                                                        #subinstanceStride = 3\n",
-    "                                                                                        #extractedDir = '/home/adithyapa4444_gmail_com'\n",
+    "    extractedDir = '/home/adithyapa4444_gmail_com'\n",
     "    rawDir = extractedDir + 'RAW'\n",
     "    sourceDir = rawDir\n",
     "    from os import mkdir\n",
@@ -820,29 +787,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1.5736732482910156 / 1465"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-04-30T09:52:42.334950Z",
-     "start_time": "2019-04-30T09:52:42.318103Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "x_test.shape, bagPredictions.shape,y_test.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -986,13 +930,6 @@
     "print('PART IV: Accuracy at k = %d: %f' % (k,  np.mean((bagPredictions ==\n",
     "                                                        BAG_TEST).astype(int))))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
